--- a/hugo.toml
+++ b/hugo.toml
@@ -13,23 +13,22 @@ enableRobotsTXT = true
 # Will give values to .Lastmod etc.
 enableGitInfo = true
 
-# Comment out to enable taxonomies in Docsy
-# disableKinds = ["taxonomy", "taxonomyTerm"]
+disableKinds = ["taxonomy", "taxonomyTerm","RSS"]
 
 # You can add your own taxonomies
-[taxonomies]
-tag = "tags"
-category = "categories"
+#[taxonomies]
+#tag = "tags"
+#category = "categories"
 
 [params.taxonomy]
 # set taxonomyCloud = [] to hide taxonomy clouds
-taxonomyCloud = ["tags", "categories"]
+#taxonomyCloud = ["tags", "categories"]
 
 # If used, must have same length as taxonomyCloud
-taxonomyCloudTitle = ["Tag Cloud", "Categories"]
+#taxonomyCloudTitle = ["Tag Cloud", "Categories"]
 
 # set taxonomyPageHeader = [] to hide taxonomies on the page headers
-taxonomyPageHeader = ["tags", "categories"]
+#taxonomyPageHeader = ["tags", "categories"]
 
 
 # Highlighting config
@@ -65,7 +64,7 @@ languageName ="English"
 weight = 1
 [languages.en.params]
 title = "Goldydocs"
-description = "A Docsy example site"
+description = "Documentation for LingoDB"
 
 [markup]
   [markup.goldmark]
@@ -82,8 +81,9 @@ description = "A Docsy example site"
 # Everything below this are Site Params
 
 # Comment out if you don't want the "print entire section" link enabled.
-[outputs]
-section = ["HTML", "print", "RSS"]
+#[outputs]
+#section = ["HTML", "print"]
+
 
 [params]
 copyright = "LingoDB Contributers"
@@ -111,9 +111,9 @@ version = "0.0"
 url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/google/docsy-example"
+github_repo = "https://github.com/lingo-db/docs"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/google/docsy"
+github_project_repo = "https://github.com/lingo-db/lingo-db"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
